--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,11 +5,22 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+unbind %
+unbind '"'
+bind v split-window -h
+bind | split-window -h
+bind s split-window -v
+bind - split-window -v
+
 # Change command prefix to Ctrl-a
 set-option -g prefix C-a
 unbind C-b
 
 # Change visual look
-set-option -g pane-active-border-bg green
+set-option -g pane-active-border-bg red
+set-option -g pane-active-border-fg black
+set -g status-bg black
+set -g status-fg white
+setw -g window-status-current-bg red
 
 
