Modified behaviour with multiple tmux-sessions

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,15 @@ bind | split-window -h
 bind s split-window -v
 bind - split-window -v
 
+# Send commands through to inner tmux-session
+bind-key a send-prefix
+
+# Set escape time to 0
+set -s escape-time 0
+
+# If same session is open on multiple terminals, don't force the smallest screen-size
+setw -g aggressive-resize on
+
 # Change command prefix to Ctrl-a
 set-option -g prefix C-a
 unbind C-b
