--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,3 +32,11 @@ set -g status-bg black
 set -g status-fg white
 setw -g window-status-current-bg red
 
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
+
+set -g utf8
+set-window-option -g utf8 on
+set -g status-utf8 on
